Terminato -Fix bug overflow

--- a/src/master.scss
+++ b/src/master.scss
@@ -7,8 +7,6 @@
 
 body{
 
-    overflow: hidden;
-
     nav.navbar{
         flex-direction: column;
         align-items: flex-start;
